# python-gui-sample

./: .editorconfig  .pylintrc.ini  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  code-style.yml
app/: pygui-pyside.py  pygui-pyside.spec  pygui-tkinter.py  pygui-tkinter.spec
src/python_gui_sample/: logic.py  model.py
src/python_gui_sample/gui_pyside/: main.py
src/python_gui_sample/gui_pyside/ui/: list_window.ui  main_window.ui
src/python_gui_sample/gui_tkinter/: main.py
src/python_gui_sample/serializers/: __init__.py  base.py  csv_serializer.py  json_serializer.py
